--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visible Panic</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +16,15 @@
                 <img src="CONCEPT 2.jpg" alt="Visible Panic Logo">
             </div>
         </div>
+        <p class="tagline">A journey through hypnotic esoteric music.</p>
     </header>
 
     <main>
         <section class="debut-event">
-            <h2>Debut Event</h2>
+            <h2>Launch Party</h2>
             <p class="date">6th February 2026</p>
-            <p class="location">Secret Location</p>
+            <p class="location">Muthers</p>
+            <a href="#" target="_blank" rel="noopener noreferrer">Tickets</a>
             <div class="poster-placeholder">
                 [Poster Coming Soon]
             </div>
@@ -27,38 +32,26 @@
 
         <section class="ethos">
             <h2>Ethos</h2>
-            <p>Add your club night ethos and philosophy here. Describe what makes Visible Panic unique and what you stand for.</p>
+            <p>DIY party creating an intimate and safe space for all to enjoy. A focus on the weirder fringes of dance music taking you on a journey throughout the night. Spaces to dance and express yourself with other spaces to relax and enjoy more ambient sounds. All are welcome!</p>
         </section>
 
-        <section class="contact">
-            <h2>Contact</h2>
-            <div class="social-icons">
-                <a href="#" class="social-icon" aria-label="Instagram">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-                    </svg>
-                </a>
-                <a href="#" class="social-icon" aria-label="Facebook">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                    </svg>
-                </a>
-                <a href="#" class="social-icon" aria-label="Twitter/X">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                    </svg>
-                </a>
-                <a href="#" class="social-icon" aria-label="SoundCloud">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M1.175 12.225c-.051 0-.094.046-.101.1l-.233 2.154.233 2.105c.007.058.05.098.101.098.05 0 .09-.04.099-.098l.255-2.105-.27-2.154c-.007-.057-.045-.1-.096-.1m-.899.828c-.051 0-.091.039-.099.091l-.178 1.326.178 1.261c.008.053.048.092.099.092.05 0 .089-.039.097-.092l.207-1.261-.207-1.326c-.008-.053-.047-.091-.097-.091m1.85-.708c-.05 0-.087.038-.094.086l-.287 2.032.287 1.97c.007.05.044.086.094.086.051 0 .089-.037.096-.086l.316-1.97-.316-2.032c-.007-.049-.045-.086-.096-.086m.928-.499c-.044 0-.081.036-.087.08l-.339 2.531.339 2.458c.006.044.043.08.087.08.051 0 .088-.036.094-.08l.367-2.458-.367-2.531c-.006-.044-.043-.08-.094-.08m.964-.39c-.05 0-.086.037-.093.087l-.378 2.921.378 2.806c.007.05.043.087.093.087.051 0 .088-.037.095-.087l.41-2.806-.41-2.921c-.007-.05-.044-.087-.095-.087m.967-.17c-.05 0-.087.036-.094.085l-.401 3.091.401 2.97c.007.05.044.085.094.085.05 0 .087-.035.094-.085l.435-2.97-.435-3.091c-.007-.05-.044-.085-.094-.085m.983.144c-.055 0-.096.041-.104.096l-.418 2.947.418 2.842c.008.056.049.097.104.097.051 0 .095-.041.102-.097l.456-2.842-.456-2.947c-.007-.055-.051-.096-.102-.096m1.01.703c-.055 0-.097.042-.103.097l-.437 2.244.437 2.16c.006.056.048.097.103.097.057 0 .1-.041.107-.097l.468-2.16-.468-2.244c-.007-.055-.05-.097-.107-.097M10.39 8.74c-.055 0-.095.04-.103.094l-.453 3.535.453 3.398c.008.055.048.095.103.095.055 0 .097-.04.104-.095l.494-3.398-.494-3.535c-.007-.055-.049-.094-.104-.094m1.043-.293c-.055 0-.097.041-.103.095l-.481 3.828.481 3.684c.006.055.048.095.103.095.056 0 .098-.04.104-.095l.522-3.684-.522-3.828c-.006-.054-.048-.095-.104-.095m1.044-.355c-.055 0-.096.04-.102.094l-.51 4.183.51 4.025c.006.056.047.095.102.095.057 0 .1-.039.106-.095l.555-4.025-.555-4.183c-.006-.055-.049-.094-.106-.094m1.044.197c-.055 0-.097.04-.104.094l-.527 3.986.527 3.827c.007.056.049.095.104.095.056 0 .099-.039.105-.095l.571-3.827-.571-3.986c-.006-.055-.049-.094-.105-.094m1.057-.058c-.062 0-.105.046-.112.103l-.555 4.044.555 3.785c.007.057.05.104.112.104.062 0 .106-.047.112-.104l.604-3.785-.604-4.044c-.006-.057-.05-.103-.112-.103m1.009-.058c-.063 0-.106.046-.113.103l-.555 4.102.555 3.727c.007.057.05.104.113.104.062 0 .106-.047.113-.104l.604-3.727-.604-4.102c-.007-.057-.051-.103-.113-.103m1.044.058c-.062 0-.105.046-.112.103l-.556 4.044.556 3.785c.007.057.05.104.112.104.062 0 .105-.047.112-.104l.604-3.785-.604-4.044c-.007-.057-.05-.103-.112-.103M19.16 8.17c-.062 0-.105.047-.112.104l-.555 4.101.555 3.727c.007.058.05.104.112.104s.105-.046.112-.104l.604-3.727-.604-4.101c-.007-.057-.05-.104-.112-.104m1.044.197c-.062 0-.105.04-.112.094l-.555 3.986.555 3.827c.007.056.05.095.112.095.063 0 .106-.039.112-.095l.605-3.827-.605-3.986c-.006-.055-.049-.094-.112-.094m1.045-.355c-.062 0-.105.04-.112.094l-.527 4.183.527 4.025c.007.056.05.095.112.095.062 0 .106-.039.112-.095l.571-4.025-.571-4.183c-.006-.055-.05-.094-.112-.094m1.044.293c-.062 0-.105.04-.112.095l-.481 3.828.481 3.684c.007.055.05.095.112.095.063 0 .106-.04.113-.095l.522-3.684-.522-3.828c-.007-.055-.05-.095-.113-.095z"/>
-                    </svg>
-                </a>
-            </div>
-        </section>
     </main>
 
     <footer>
-        <p>&copy; 2026 Visible Panic. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="newsletter">
+                <form action="https://buttondown.com/api/emails/embed-subscribe/visible" method="post" class="newsletter-form embeddable-buttondown-form">
+                    <input type="email" name="email" id="bd-email" placeholder="Email signup" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+            <div class="footer-links">
+                <a href="https://instagram.com/visiblepanic" target="_blank" rel="noopener noreferrer">Instagram</a>
+                <a href="mailto:visible.panic.brum@gmail.com">Email</a>
+                <a href="https://tightchestrecords.bandcamp.com/" target="_blank" rel="noopener noreferrer">Bandcamp</a>
+            </div>
+            <p class="copyright">&copy; 2026 Visible Panic</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
