feat: update with new fonts and logos

--- a/index.html
+++ b/index.html
@@ -6,28 +6,24 @@
     <title>Visible Panic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100..700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <div class="logo-circle" id="logo">
-                <img src="CONCEPT 2.jpg" alt="Visible Panic Logo">
-            </div>
+            <img src="artwork/logo-1.png" alt="Visible Panic Logo" class="logo">
         </div>
         <p class="tagline">A journey through hypnotic esoteric music.</p>
     </header>
 
     <main>
         <section class="debut-event">
-            <h2>Launch Party</h2>
+            <h2>Opening Party</h2>
             <p class="date">6th February 2026</p>
             <p class="location">Muthers</p>
             <a href="#" target="_blank" rel="noopener noreferrer">Tickets</a>
-            <div class="poster-placeholder">
-                [Poster Coming Soon]
-            </div>
+            <img src="artwork/poster-1.jpg" alt="Visible Panic Launch Party Poster" class="poster">
         </section>
 
         <section class="ethos">
