--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visible Panic</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100..700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="DIY party creating an intimate and safe space for all to enjoy. A focus on the weirder fringes of dance music taking you on a journey throughout the night.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://visible-panic.net/">
+    <meta property="og:title" content="Visible Panic - A journey through hypnotic esoteric music">
+    <meta property="og:description" content="DIY party creating an intimate and safe space for all to enjoy. A focus on the weirder fringes of dance music taking you on a journey throughout the night.">
+    <meta property="og:image" content="https://visible-panic.net/artwork/poster-1.jpg">
 </head>
 <body>
     <header>
