feat: fix favicon issue

--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <title>Visible Panic</title>
     <meta name="description" content="DIY party creating an intimate and safe space for all to enjoy. A focus on the weirder fringes of dance music taking you on a journey throughout the night.">
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://visible-panic.net/">
     <meta property="og:title" content="Visible Panic - A journey through hypnotic esoteric music">
     <meta property="og:description" content="DIY party creating an intimate and safe space for all to enjoy. A focus on the weirder fringes of dance music taking you on a journey throughout the night.">
     <meta property="og:image" content="https://visible-panic.net/artwork/poster-1.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="artwork/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="artwork/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="artwork/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="artwork/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="artwork/favicon/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="artwork/favicon/android-chrome-192x192.png">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100..700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
