feat: add ticket link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2>Opening Party</h2>
             <p class="date">6th February 2026</p>
             <p class="location">Muthers</p>
-            <a href="#" target="_blank" rel="noopener noreferrer">Tickets</a>
+            <a href="https://ra.co/events/2328029" target="_blank" rel="noopener noreferrer">Tickets</a>
             <img src="artwork/poster-1.jpg" alt="Visible Panic Launch Party Poster" class="poster">
         </section>
 
